syntax = "proto3";

package new_bedford;

option java_multiple_files = true;
option java_package = "llc.goldenagetechnologies.newbedford";
option java_outer_classname = "TxManagerProto";

message LiquidateRequest {
  // Can send multiple liquidation candidates at once
  repeated LiquidationCandidate candidates = 1;
}

message LiquidateReply {
  // Success signalled by gRPC status code
}

message LiquidationCandidate {
  // Token prices, signatures, and messages (from Coinbase) corresponding to the ones that were used to determine liquidatability
  repeated TransactionTokenData tokens = 1;
  // Profitability (to determine maximum allowed transaction fee)
  double expectedRevenue = 2;
  // Candidate address
  int32 candidateAddress = 3;
  // Address of cToken to repay
  int32 repayTokenAddress = 4;
  // Address of cToken to seize
  int32 seizeTokenAddress = 5;
}

message TransactionTokenData {
  // An instance of token data, signature, and message (from Coinbase) corresponding to the ones that were used to determine liquidatability
  string symbol = 1; // Ticker (BAT, USDC, etc)
  bytes signature = 2;
  bytes message = 3;
}

message CancelCandidateRequest {
  repeated int32 addresses = 1;
}

message CancelCandidateReply {
  // Success signalled by gRPC status code
}

service TxManager {
  // Send the candidates in bulk. If multiple queries come in, the service will be able to update it's parameters.
  rpc submitCandidates (stream LiquidateRequest) returns (LiquidateReply) {}
  // Also send liquidatability falling-edge, transitions from liquidatable -> not liquidatable.
  // (Usually from someone else liquidating, possibly from other events)
  rpc cancelCandidates (stream CancelCandidateRequest) returns (CancelCandidateReply) {}
}